# projektm

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  conanfile.txt
include/renderer/: renderer.h  renderer.hpp
scripts/: voxel_debug_win64_vs2022.cmd  voxel_win64_vs2022_debug.cmd
src/: CMakeLists.txt  main.cpp
src/renderer/: CMakeLists.txt  renderer.cpp
